# Tsepepe

./: .flake8  CMakeLists.txt  README.md  test.cpp
cmake/: 0001_cucumber_cpp_fix_asio_std_exchange_error.patch  dependencies.cmake
doc/: clangd_requests.md  clangd_requests.txt  extract_method_and_function_requirements.md  notes.txt
function_definition_generator/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  definition_generator.cpp  definition_generator.hpp  function_declaration_location.hpp  tool.cpp
paired_cpp_file_finder/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  finder.cpp  finder.hpp  input.hpp  tool.cpp
src/: CMakeLists.txt  yolo_interface.hpp
src/abstract_class_finder/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  finder.cpp  finder.hpp  input.hpp  tool.cpp
src/full_class_name_expander/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  expander.cpp  expander.hpp  input.hpp  tool.cpp
src/function_definition_generator/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  definition_generator.cpp  definition_generator.hpp  function_declaration_location.hpp  input.hpp  tool.cpp
src/implementor_maker/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  input.hpp  tool.cpp
src/include/: .tsepepe_implementor_temp.hpp  base_error.hpp  code_insertions_applier.hpp  codebase_grepper.hpp  common_types.hpp  debug_utils.hpp  directory_tree.hpp  file_grepper.hpp  generate_function_definitions_code_action.hpp  implement_interface_code_action.hpp  include_statement_place_resolver.hpp  scope_remover.hpp  self_deleting_file.hpp  string_utils.hpp  symbol_finder.hpp  temporary_file_maker.hpp
src/include/interfaces/: code_action.hpp  source_range.hpp  symbol_finder.hpp
src/include/libclang_utils/: ast_record.hpp  base_specifier_resolver.hpp  full_function_declaration_expander.hpp  full_method_declaration_expander.hpp  include_resolver.hpp  include_statement_place_resolver.hpp  lexed_range.hpp  misc_utils.hpp  presumed_source_range.hpp  pure_virtual_functions_extractor.hpp  suitable_place_in_class_finder.hpp  token_iterator.hpp
src/paired_cpp_file_finder/: CMakeLists.txt  cmd_parser.cpp  finder.cpp
src/pure_virtual_functions_extractor/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  extractor.cpp  extractor.hpp  input.hpp  tool.cpp
src/src/: code_insertions_applier.cpp  codebase_grepper.cpp  directory_tree.cpp  file_grepper.cpp  generate_function_definitions_code_action.cpp  implement_interface_code_action.cpp  include_statement_place_resolver.cpp  scope_remover.cpp  symbol_finder.cpp
src/src/libclang_utils/: ast_utils.cpp  base_specifier_resolver.cpp  full_function_declaration_expander.cpp  full_method_declaration_expander.cpp  include_resolver.cpp  include_statement_place_resolver.cpp  misc_utils.cpp  pure_virtual_functions_extractor.cpp  suitable_place_in_class_finder.cpp
src/suitable_place_in_class_finder/: CMakeLists.txt  cmd_parser.cpp  cmd_parser.hpp  finder.cpp  finder.hpp  input.hpp  tool.cpp
src/utils/: CMakeLists.txt  clang_ast_utils.cpp  clang_ast_utils.hpp  class_name_to_header_file_name_regex.cpp  cmd_utils.cpp  cmd_utils.hpp  compilation_database_parser.cpp  error.hpp  filesystem_utils.cpp  filesystem_utils.hpp  fs_ranges_utils.hpp  regex_wrapper.hpp  utils.hpp
tests/: CMakeLists.txt
tests/catch2/: CMakeLists.txt  clang_ast_fixtures.hpp  ostream_printers.hpp  test_base_specifier_resolver.cpp  test_class_name_to_potential_header_file_name_regex.cpp  test_code_insertions_applier.cpp  test_codebase_grepper.cpp  test_full_function_declaration_expander.cpp  test_full_method_declaration_expander.cpp  test_implement_interface_code_action.cpp  test_include_resolver.cpp  test_include_resolver.hpp  test_include_statement_place_resolver.cpp  test_multiple_function_definitions_generator.cpp  test_pure_virtual_functions_extractor.cpp  test_self_deleting_file.cpp  test_suitable_place_in_class_finder.cpp  test_symbol_finder.cpp  test_temporary_file_maker.cpp
tests/function_definition_generator/: test_function_definition_generation.feature
tests/function_definition_generator/features/: environment.py  test_function_definition_generation.feature
tests/function_definition_generator/features/helpers/: compilation_database.py
tests/function_definition_generator/features/steps/: steps.py
tests/function_definition_generator/steps/: steps.py
tests/gherkin/: CMakeLists.txt  daemonizer.py  requirements.txt
tests/gherkin/abstract_class_finder/: test_abstract_class_finder.feature
tests/gherkin/abstract_class_finder/steps/: steps.py
tests/gherkin/full_class_name_expander/: environment.py  test_full_class_name_expander.feature
tests/gherkin/full_class_name_expander/steps/: steps.py
tests/gherkin/function_definition_generator/: environment.py  test_function_definition_generation.feature
tests/gherkin/function_definition_generator/steps/: steps.py
tests/gherkin/helpers/: file.py  tool_result.py  utils.py
tests/gherkin/implement_interface_code_action/: implement_interface_code_action.feature
tests/gherkin/implement_interface_code_action/step_definitions/: steps.cpp
tests/gherkin/paired_cpp_file_finder/steps/: steps.py
tests/gherkin/pure_virtual_functions_extractor/: environment.py  test_pure_virtual_functions_extractor.feature
tests/gherkin/pure_virtual_functions_extractor/steps/: steps.py
tests/gherkin/suitable_place_in_class_finder/: test_suitable_place_in_class_finder.feature
tests/gherkin/suitable_place_in_class_finder/steps/: steps.py
tests/helpers/: file.py
tests/paired_cpp_file_finder/: test_paired_cpp_file_finder.feature
tests/paired_cpp_file_finder/features/: test_paired_cpp_file_finder.feature
tests/paired_cpp_file_finder/features/steps/: steps.py
