find_program(RIPGREP rg REQUIRED)

find_package(Boost 1.74 REQUIRED COMPONENTS headers)
ProvideRangesV3()

add_subdirectory(utils)
add_subdirectory(function_definition_generator)
add_subdirectory(paired_cpp_file_finder)
add_subdirectory(abstract_class_finder)
add_subdirectory(pure_virtual_functions_extractor)
add_subdirectory(suitable_place_in_class_finder)
add_subdirectory(full_class_name_expander)
